--- a/Geo2.tex
+++ b/Geo2.tex
@@ -539,7 +539,6 @@ $\angle EAF$ can be considered as the sum of $Ax$ and $Ay$. We know that $By$ an
 
 \subsection{Definition}
 A quadrilateral which has all its four vertices lying on the perimeter of a circle.
-\vspace{20px}
 
 \subsection{Opposite angles are added up to \(180^{\circ}\)}
 
@@ -646,7 +645,7 @@ Then $\angle BDB'=\angle B'-\angle DBC=0$ \\
 Therefore, B and B' must be the same point.
 \end{minipage}
 
-\subsection{The sum of the opposite angle is $180^\circ$}
+\subsubsection{The sum of the opposite angle is $180^\circ$}
 
 Proof is similar to 2.3.2
 \pagebreak
@@ -867,44 +866,59 @@ Prove AFG is an isosceles triangle.
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1.6,xscale=1.6]
 %uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
-%Shape: Circle [id:dp7743386354543087] 
-\draw   (272,153.77) .. controls (272,93.14) and (321.14,44) .. (381.77,44) .. controls (442.39,44) and (491.53,93.14) .. (491.53,153.77) .. controls (491.53,214.39) and (442.39,263.53) .. (381.77,263.53) .. controls (321.14,263.53) and (272,214.39) .. (272,153.77) -- cycle ;
-%Straight Lines [id:da47145245486689236] 
-\draw    (23.53,197.03) -- (639.53,194.03) ;
-%Straight Lines [id:da7467273744841061] 
-\draw    (332.53,4.03) -- (279.53,193.03) ;
-%Straight Lines [id:da8376954192631836] 
-\draw    (313.53,66.03) -- (482.53,193.03) ;
-%Straight Lines [id:da08661975676931188] 
-\draw    (313.53,66.03) -- (186.53,195.03) ;
-%Straight Lines [id:da05307429520515172] 
-\draw    (23.53,197.03) -- (444.53,9.03) ;
+%Shape: Circle [id:dp2794602066066383] 
+\draw   (215.42,134.22) .. controls (215.42,98.74) and (244.18,69.97) .. (279.67,69.97) .. controls (315.15,69.97) and (343.92,98.74) .. (343.92,134.22) .. controls (343.92,169.71) and (315.15,198.47) .. (279.67,198.47) .. controls (244.18,198.47) and (215.42,169.71) .. (215.42,134.22) -- cycle ;
+%Straight Lines [id:da9295963036997694] 
+\draw    (75.5,160) -- (407.09,159.59) ;
+%Straight Lines [id:da04780946384530149] 
+\draw    (230,93.25) -- (221,159.75) ;
+%Straight Lines [id:da582836471963158] 
+\draw    (230,93.25) -- (338.75,160) ;
+%Straight Lines [id:da29944212726334096] 
+\draw    (230,93.25) -- (297.75,228.75) ;
+%Straight Lines [id:da48123026856809825] 
+\draw    (314,48.25) -- (91.75,167.5) ;
+%Straight Lines [id:da3072783140413484] 
+\draw    (275.75,33.5) -- (140,210.75) ;
+%Shape: Arc [id:dp24987469828003062] 
+\draw  [draw opacity=0] (329,160) .. controls (329,160) and (329,160) .. (329,160) .. controls (329,158.13) and (329.56,156.38) .. (330.51,154.91) -- (338.75,160) -- cycle ; \draw   (329,160) .. controls (329,160) and (329,160) .. (329,160) .. controls (329,158.13) and (329.56,156.38) .. (330.51,154.91) ;  
+%Shape: Arc [id:dp2781603508357975] 
+\draw  [draw opacity=0] (224.77,101.48) .. controls (224.77,101.48) and (224.77,101.48) .. (224.77,101.48) .. controls (223.19,100.47) and (222.01,99.07) .. (221.29,97.47) -- (230,93.25) -- cycle ; \draw   (224.77,101.48) .. controls (224.77,101.48) and (224.77,101.48) .. (224.77,101.48) .. controls (223.19,100.47) and (222.01,99.07) .. (221.29,97.47) ;  
 
 % Text Node
-\draw (297.53,49.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {A};
+\draw (219.14,80.93) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$A$};
 % Text Node
-\draw (267,195) node [anchor=north west][inner sep=0.75pt]   [align=left] {B};
+\draw (343.14,146.93) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$C$};
 % Text Node
-\draw (484.53,196.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {C};
+\draw (272.39,71.43) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$E$};
 % Text Node
-\draw (361,50) node [anchor=north west][inner sep=0.75pt]   [align=left] {E};
+\draw (223.89,147.18) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$B$};
 % Text Node
-\draw (188.53,198.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {F};
+\draw (282.39,185.68) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$D$};
 % Text Node
-\draw (25.53,200.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {G};
+\draw (172.89,147.43) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$F$};
 % Text Node
-\draw (334.53,7.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {D};
+\draw (100.14,145.18) node [anchor=north west][inner sep=0.75pt]  [font=\scriptsize]  {$G$};
+% Text Node
+\draw (219.75,108.15) node [anchor=north west][inner sep=0.75pt]  [font=\tiny]  {$y$};
+% Text Node
+\draw (241.75,89.65) node [anchor=north west][inner sep=0.75pt]  [font=\tiny]  {$x$};
+% Text Node
+\draw (317,150.15) node [anchor=north west][inner sep=0.75pt]  [font=\tiny]  {$y$};
+% Text Node
+\draw (189,114.15) node [anchor=north west][inner sep=0.75pt]  [font=\tiny]  {$x-y$};
+% Text Node
+\draw (120.25,153.4) node [anchor=north west][inner sep=0.75pt]  [font=\tiny]  {$x-y$};
 
 
 \end{tikzpicture}
-Since $AE$ is the external angle bisector \\
-$\angle GAB=\angle DAE = \angle EAC$\\
-Also by Tangent-Chord Theorem, $\angle FAB = \angle ACB$ \\
-Therefore, $\angle G = \angle EAC - \angle ACB = \angle GAB - \angle FAB = \angle GAF$\\
-Therefore, AFG is an isosceles triangle
+\\\\
+Since $AE$ is the external angle bisector, $\angle GAB= \angle EAC$.\\
+Also, by Tangent-Chord Theorem, $\angle FAB = \angle ACB$. \\
+Therefore, $\angle G = \angle EAC - \angle ACB = \angle GAB - \angle FAB = \angle GAF$ (External Angle Theorem), and thus, AFG is an isosceles triangle.
 
 
 \pagebreak
@@ -921,6 +935,92 @@ If a quadrilateral is inscribed in a circle then the product of the lengths of i
 \subsection{Problem}
 In \(\triangle\)ABC, point D is inside of ABC such that \(\angle \mathrm{DAC} = \angle \mathrm{DCA}=30^{\circ} \) and \(\angle \mathrm{DBA}=60^{\circ}\). E is the midpoint on BC and F is a trisect point on AC such that \(\mathrm{CF} = \frac{\mathrm{CA}}{3} \). Prove DE \(\perp\) EF.
 
-\includegraphics{Picture21.png}
+
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.7,xscale=.7]
+%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+
+%Straight Lines [id:da795234166630395] 
+\draw    (219.43,37.61) -- (496.79,250.84) ;
+%Straight Lines [id:da2470680087714714] 
+\draw    (162.57,249.74) -- (496.79,250.84) ;
+%Straight Lines [id:da7469666194240066] 
+\draw    (219.43,37.61) -- (162.57,249.74) ;
+%Straight Lines [id:da8315290951418923] 
+\draw    (312.62,108.32) -- (162.57,249.74) ;
+%Straight Lines [id:da27413735236355286] 
+\draw    (312.62,108.32) -- (290.22,217.87) ;
+%Straight Lines [id:da4498983652658053] 
+\draw    (401.59,177.93) -- (290.22,217.87) ;
+%Straight Lines [id:da12015425835999238] 
+\draw    (290.22,217.87) -- (162.57,249.74) ;
+%Straight Lines [id:da19572259445679085] 
+\draw    (496.79,250.84) -- (290.22,217.87) ;
+%Straight Lines [id:da1388174928028587] 
+\draw    (389.21,232.89) -- (401.59,177.93) ;
+%Straight Lines [id:da7036788173420365] 
+\draw    (290.22,217.87) -- (329.68,250.29) ;
+%Straight Lines [id:da7821068872992052] 
+\draw    (219.43,37.61) -- (290.22,217.87) ;
+%Straight Lines [id:da3718621800799] 
+\draw    (358.11,144.23) -- (290.22,217.87) ;
+%Straight Lines [id:da5614628174268017] 
+\draw    (401.59,177.93) -- (329.68,250.29) ;
+%Shape: Ellipse [id:dp47620171285324453] 
+\draw   (86.57,145.22) .. controls (86.57,84.48) and (138.56,35.24) .. (202.69,35.24) .. controls (266.82,35.24) and (318.81,84.48) .. (318.81,145.22) .. controls (318.81,205.96) and (266.82,255.2) .. (202.69,255.2) .. controls (138.56,255.2) and (86.57,205.96) .. (86.57,145.22) -- cycle ;
+%Shape: Ellipse [id:dp6903666392287857] 
+\draw   (288.07,198.18) .. controls (288.07,167.48) and (314.35,142.59) .. (346.77,142.59) .. controls (379.18,142.59) and (405.46,167.48) .. (405.46,198.18) .. controls (405.46,228.88) and (379.18,253.77) .. (346.77,253.77) .. controls (314.35,253.77) and (288.07,228.88) .. (288.07,198.18) -- cycle ;
+
+% Text Node
+\draw (220.71,15.71) node [anchor=north west][inner sep=0.75pt]   [align=left] {A};
+% Text Node
+\draw (151.09,252.76) node [anchor=north west][inner sep=0.75pt]   [align=left] {B};
+% Text Node
+\draw (500.15,254.98) node [anchor=north west][inner sep=0.75pt]   [align=left] {C};
+% Text Node
+\draw (282.69,222.35) node [anchor=north west][inner sep=0.75pt]   [align=left] {D};
+% Text Node
+\draw (325.93,254.22) node [anchor=north west][inner sep=0.75pt]   [align=left] {E};
+% Text Node
+\draw (407.09,161.53) node [anchor=north west][inner sep=0.75pt]   [align=left] {F};
+% Text Node
+\draw (311.39,94.48) node [anchor=north west][inner sep=0.75pt]   [align=left] {G};
+% Text Node
+\draw (356.96,128.19) node [anchor=north west][inner sep=0.75pt]   [align=left] {H};
+% Text Node
+\draw (393.19,232.63) node [anchor=north west][inner sep=0.75pt]   [align=left] {I};
+
+
+\end{tikzpicture}
+\\
+Let G be the midpoint of AF, Draw DH perpendicular to AC, FI perpendicular to CD.
+Connect DG,DF,BG\\
+\\
+Claim 1: DFG is an equilateral triangle and AGD and DFC are 30-120-30 triangles.\\
+Proof of Claim 1:\\
+Let DC=x.\\
+Since $\angle DAC = \angle DCA = 30^\circ$\\
+$DH=\frac{x}{2}$, $CH = \frac{\sqrt{3}x}{2}$, $HF = \frac{HC}{3}$\\
+Therefore, $HF = \frac{\sqrt{3}x}{6} = \frac{DH}{\sqrt{3}}$\\
+This implies that DHF is a 30-60-90 triangle and DFC is a 30-120-30 triangle.\\
+Similarly, AGD is a 30-120-30 triangle and therefore DFG is an equilateral triangle.\\
+\\
+By Claim 1, AGDB concyclic since $\angle ABD = \angle FGD = 60^\circ$\\
+Also by Claim 1, I is the midpoint of CD.\\
+\\
+Now, consider the homothety from C with ratio 1/2.\\
+It is clear that A maps to H, B maps to E, D maps to I, G maps to F.
+Therefore, Circle ABDG maps to the circle HEIF (Note we haven't proved that D also lies on the same circle).\\
+\\
+Now, let's prove that D also lies on the same circle.\\
+Since $\angle FDI = 30^\circ$, enough to show the arc IF = $60^\circ$ (arc is measured by the central angle).\\
+However, by homothety, the measure of arc IF is the same as the measure of arc DG = $60^\circ$ as $\angle DAG =30^\circ$\\
+Therefore, D lies in the circle HEIF or HDEIF concyclic.\\
+\\
+Since HDEIF concyclic, $\angle DEF=\angle DIF = 90^\circ$\\
+Therefore, DE \(\perp\) EF.\\
+Q.E.D.
 
 \end{document}
