--- a/Geo4.tex
+++ b/Geo4.tex
@@ -268,7 +268,7 @@ Find the distance between (1,3) and (6,7).
 
 \end{tikzpicture}
 
-\subsection{Point to Line DIstance Formula}
+\subsection{Point to Line Distance Formula}
 
 The distance between the line $ax+by+c = 0$ and point $(x_1,y_1)$ is\[\dfrac{|ax_1+by_1+c|}{\sqrt{a^2+b^2}}\]
 
