--- a/Geo5.tex
+++ b/Geo5.tex
@@ -11,7 +11,7 @@
 
 \title{Geometry 5 - 3D Geometry Intro}
 \author{TSS Math Club}
-\date{Nov 2022}
+\date{Dec 2022}
 
 \begin{document}
 \large
@@ -20,7 +20,7 @@
 
 \section{3D Geometry: Think 2D}
 
-\subsection{Example 1}
+\subsection{Example}
 
 In a regular tetrahedron $ABCD$, $M$ is the midpoint of $CD$. Find $\angle AMB$.
 
