--- a/Geo4.tex
+++ b/Geo4.tex
@@ -14,6 +14,7 @@
 \date{Nov 2022}
 
 \begin{document}
+\large
 
 \maketitle
 
@@ -444,14 +445,19 @@ $$x \cdot y = x_1y_1+x_2y_2$$
     \item homogeneity:
     \item symmetry:
 \end{itemize}
+
 \subsubsection{Dot Product and Metric}
-\vspace{30px}
+\vspace{40px}
+
 \subsubsection{Penpendicularity}
-\vspace{30px}
+\pagebreak
+
 \subsubsection{Dot Product and Cosine Law}
 \vspace{100px}
+
 \subsubsection{Dot Product as Projection}
-\pagebreak
+\vspace{100px}
+
 \subsubsection{Problem (1975 USAMO Q2)}
 Let $A,B,C,D$ denote four points in space and $AB$ the distance between $A$ and $B$, and so on. Show that\[AC^2+BD^2+AD^2+BC^2\ge AB^2+CD^2.\]
 
