--- a/Geo3.tex
+++ b/Geo3.tex
@@ -133,7 +133,7 @@ Cosine or $\cos(\theta)$ :
 Tangent or $\tan(\theta)$ :
 
 \subsection{Pythagorean Theorem}
-$$\sin (\theta)+\cos (\theta)=1$$
+$$\sin^2 (\theta)+\cos^2 (\theta)=1$$
 
 \subsection{Triangle Area Formula with Sine}
 
